# Metis

./: .gitignore  AI_DEFERRAL_PLAN.md  AUDIT_FINDINGS.md  CLAUDE (1).md  CLAUDE-v1-archive.md  CLAUDE.md  CLEANUP.md  LICENSE  MIGRATION_PLAN.md  PROGRESS_M1.md  PROGRESS_M2.md  PROGRESS_M3.md  PROGRESS_M4.md  README.md  STARTER_PROMPT.md  package-lock.json  package.json
apps/web/lib/: api.ts  (+1 more)
services/api/: .env.example  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/verify/: verify_0007.sql  verify_0008.sql  verify_0009.sql  verify_0010.sql  verify_0011.sql  verify_0012.sql  verify_0013.sql  verify_0014.sql
services/api/alembic/versions/: 0001_updated_at_trigger.py  0002_baseline_schema.py  0003_academic_schema.py  0004_auth_enhancements.py  0005_attendance_schema.py  0006_marks_schema.py  0007_m2_rework_additive.py  0008_m2_rework_backfill.py  0009_m2_rework_constraints.py  0010_admin_notifications.py  0011_registration_window.py  0012_option_max_enrollment.py  0013_task_assignments.py  0014_course_registration_preferences.py
services/api/app/: __init__.py  cli.py  main.py
services/api/app/core/: audit.py  config.py  crypto.py  db.py  deps.py  email.py  event_bus.py  google_oauth.py  logging.py  ratelimit.py  redis.py  security.py
services/api/app/modules/academic/: models.py  router.py  schemas.py  service.py
services/api/app/modules/attendance/: __init__.py  face_stub.py  geo.py  models.py  qr.py  router.py  schemas.py  service.py
services/api/app/modules/auth/: router.py  schemas.py  service.py
services/api/app/modules/consents/: service.py
services/api/tests/: conftest.py  test_academic.py  test_attendance.py  test_attendance_eligibility.py  test_auth.py  test_m10a.py  test_m10b.py  test_m10c.py  test_m10d.py  test_m10e.py  test_m2_rework.py  test_marks.py
services/insights-engine/: Dockerfile  pyproject.toml
services/insights-engine/app/: __init__.py  main.py
services/insights-engine/app/consumers/: __init__.py
services/insights-engine/app/face/: __init__.py
services/insights-engine/app/risk_scoring/: __init__.py
services/learning-engine/: Dockerfile  pyproject.toml
services/learning-engine/app/: __init__.py  main.py
services/learning-engine/app/consumers/: __init__.py
services/learning-engine/app/knowledge_graph/: __init__.py
services/learning-engine/app/tutor/: __init__.py
(+80 files in other folders)
