[project]
name = "metis-api"
version = "0.1.0"
description = "Metis backend API (FastAPI) — module 1 onward"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.13.3",
  "asyncpg>=0.30.0",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "argon2-cffi>=23.1.0",
  "redis>=5.2.0",
  "slowapi>=0.1.9",
  "python-multipart>=0.0.12",
  "email-validator>=2.2.0",
  "structlog>=24.4.0",
  "cryptography>=43.0.3",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "fakeredis>=2.26.0",
  "aiosqlite>=0.20.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
